Navegar entre Telas
lógica das telas feito, necessário apenas tratar entradas, colocar verificador nas entradas (senha) e conectar ao BD

--- a/NuBonk/src/main/java/View/TelaAdm.form
+++ b/NuBonk/src/main/java/View/TelaAdm.form
@@ -25,9 +25,10 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace pref="174" max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="BtInvestimentos" min="-2" pref="124" max="-2" attributes="0"/>
-                  <Component id="BtUsuario" min="-2" pref="124" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="BtInvestimentos" pref="124" max="32767" attributes="0"/>
+                  <Component id="BtUsuario" pref="124" max="32767" attributes="0"/>
+                  <Component id="BtSair" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="154" max="-2" attributes="0"/>
           </Group>
@@ -40,7 +41,9 @@
               <Component id="BtUsuario" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
               <Component id="BtInvestimentos" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="119" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
+              <Component id="BtSair" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="102" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -60,6 +63,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtInvestimentosActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="BtSair">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Sair"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtSairActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
