--- a/NuBonk/src/main/java/View/TelaAlterarContaAdm.form
+++ b/NuBonk/src/main/java/View/TelaAlterarContaAdm.form
@@ -94,6 +94,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Alterar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtAlterarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="RotAlteracao">
       <Properties>
@@ -139,11 +142,18 @@
         <Component class="javax.swing.JTable" name="TabelaAlteracao">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="4">
-                <Column editable="true" title="Title 1" type="java.lang.Object"/>
-                <Column editable="true" title="Title 2" type="java.lang.Object"/>
-                <Column editable="true" title="Title 3" type="java.lang.Object"/>
-                <Column editable="true" title="Title 4" type="java.lang.Object"/>
+              <Table columnCount="11" rowCount="4">
+                <Column editable="false" title="Codigo" type="java.lang.String"/>
+                <Column editable="false" title="Nome" type="java.lang.String"/>
+                <Column editable="false" title="CPF" type="java.lang.String"/>
+                <Column editable="false" title="Endereco" type="java.lang.String"/>
+                <Column editable="false" title="Data de Nascimento" type="java.lang.String"/>
+                <Column editable="false" title="Genero" type="java.lang.String"/>
+                <Column editable="false" title="Telefone" type="java.lang.String"/>
+                <Column editable="false" title="Email" type="java.lang.String"/>
+                <Column editable="false" title="Investimentos" type="java.lang.Integer"/>
+                <Column editable="false" title="Saldo" type="java.lang.Float"/>
+                <Column editable="false" title="Senha" type="java.lang.String"/>
               </Table>
             </Property>
           </Properties>
