--- a/NuBonk/src/main/java/View/TelaCadastro.form
+++ b/NuBonk/src/main/java/View/TelaCadastro.form
@@ -148,11 +148,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Voltar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtVoltarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="BtCadastrar">
       <Properties>
         <Property name="text" type="java.lang.String" value="Cadastrar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtCadastrarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JRadioButton" name="RbtFeminino">
       <Properties>
@@ -169,9 +175,6 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Masculino"/>
       </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="RbtMasculinoActionPerformed"/>
-      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="RotGenero">
       <Properties>
@@ -221,9 +224,6 @@
           <Format format="##/##/####" subtype="-1" type="5"/>
         </Property>
       </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="FtxtDataActionPerformed"/>
-      </Events>
     </Component>
     <Component class="javax.swing.JFormattedTextField" name="FtxtCpf">
       <Properties>
